# Vitya_DiplomB12

./: .gitignore  README.md  pyproject.toml
01_initial_structures/: b12_hexagonal_prism.xyz
02_screening_r2scan3c/b12_hexagonal_prism/mult_1/: b12_hexagonal_prism_m1_screen.2jsonout  b12_hexagonal_prism_m1_screen.carthess  b12_hexagonal_prism_m1_screen.densitiesinfo  b12_hexagonal_prism_m1_screen.inp  b12_hexagonal_prism_m1_screen.json  b12_hexagonal_prism_m1_screen.out  b12_hexagonal_prism_m1_screen.property.json  b12_hexagonal_prism_m1_screen_saved.xyz  b12_hexagonal_prism_m1_screen_trj.xyz
03_refined_candidates/: selected_candidates.csv
04_frequencies/: summary.csv
04_frequencies/b12_hexagonal_prism/mult_1/: b12_hexagonal_prism_m1_freq.inp  (+5 more)
05_spin_comparison/: summary.csv
05_spin_comparison/b12_hexagonal_prism/: comparison_summary.txt
06_highlevel_sp/: summary.csv
b12_pipeline/: __init__.py
config/: b12_config.example.json  b12_config.i5_14600kf.json
scripts/: build_final_reports.py  run_casscf_nevpt2.py  run_dlpno_check.py  run_frequencies.py  run_full_pipeline.py  run_highlevel_sp.py  run_refinement.py  run_screening.py  run_spin_comparison.py  select_candidates.py
src/b12_pipeline/: __init__.py  cli.py  config.py  constants.py  filesystem.py  opi_runner.py  orca_parser.py  reporting.py  resources.py  selection.py  units.py  xyz.py
summaries/: 02_screening_summary.csv  03_refinement_summary.csv  07_dlpno_summary.csv  08_casscf_nevpt2_summary.csv  final_conclusion.txt  final_method_comparison.csv
tests/: test_orca_parser.py  test_selection.py
(+115 files in other folders)
